make it more obvious when buttons are disabled

--- a/src/componentSpecificStyles/editProfileStyles.css
+++ b/src/componentSpecificStyles/editProfileStyles.css
@@ -53,7 +53,7 @@
 }
 
 .forms-container form button[disabled] {
-	@apply cursor-not-allowed pointer-events-none text-gray-500;
+	@apply cursor-not-allowed pointer-events-none text-gray-500 border-gray-600;
 }
 
 .forms-container form button[disabled]:after {
