--- a/src/componentSpecificStyles/loginStyles.css
+++ b/src/componentSpecificStyles/loginStyles.css
@@ -41,7 +41,7 @@
 }
 
 .login-page-login-button[disabled] {
-	@apply cursor-not-allowed pointer-events-none text-gray-500;
+	@apply cursor-not-allowed pointer-events-none text-gray-500 border-gray-600;
 }
 
 .login-page-login-button[disabled]:after {
