- Finish up favorites page - Add back favorites button to dashboard (and to the side menu) - Allow user to call a favorite from the favorites page - Allow user to remove a favorite from the favorites page

--- a/src/componentSpecificStyles/sideMenuStyles.css
+++ b/src/componentSpecificStyles/sideMenuStyles.css
@@ -20,6 +20,10 @@
 	@apply border-white relative border-t-2 text-white text-2xl mob:text-2xl p-3 transition-colors w-full;
 }
 
+.side-menu .logout-button {
+	@apply mob:w-4/5;
+}
+
 .side-menu button:hover {
 	@apply text-black;
 }
